--- a/.github/workflows/main-ci.yml
+++ b/.github/workflows/main-ci.yml
@@ -1,19 +1,10 @@
 name: Main CI
 
 on:
-  push:
-    branches:
-      - "main"
+  push
 
 jobs:
-  fossa-scan:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: fossas/fossa-action@v1
-        with:
-          api-key: ${{secrets.FOSSA_API_KEY}}
-  build-push-images:
+  build:
     runs-on: ubuntu-latest
     steps:
       -
@@ -26,26 +17,11 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       -
-        name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Login to ECR
-        uses: docker/login-action@v2
-        with:
-          registry: 143348218800.dkr.ecr.ap-northeast-1.amazonaws.com
-          username: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          password: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      -
-        name: Build and push
+        name: Build test
         uses: docker/build-push-action@v4
         with:
           context: .
           push: true
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          tags: |
-            docker.io/mikucat0309/proof-generator:1.1.0
-            143348218800.dkr.ecr.ap-northeast-1.amazonaws.com/proof-generator:1.1.0
+          tags: test/proof-generator:latest
