--- a/.github/workflows/main-ci.yml
+++ b/.github/workflows/main-ci.yml
@@ -21,7 +21,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          push: true
+          push: false
           cache-from: type=gha
           cache-to: type=gha,mode=max
           tags: test/proof-generator:latest
