--- a/.github/workflows/main-ci.yml
+++ b/.github/workflows/main-ci.yml
@@ -11,12 +11,13 @@ jobs:
     runs-on: ubuntu-latest
     env:
       DOTNET_CLI_TELEMETRY_OPTOUT: true
+      NUGET_PACKAGES: ${{ github.workspace }}/.nuget/packages
     steps:
       - uses: actions/checkout@v3
       -
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: '7.0.x'
+          dotnet-version: '7.x'
           cache: true
       - run: dotnet restore -r linux-x64 --locked-mode
-      - run: dotnet publish -r linux-x64 -c Debug
+      - run: dotnet publish -r linux-x64
